# difyaiab

./: 01-providers.tf  02-variables.tf  README.md
core/ai_ailevate_logging/: pyproject.toml
core/ai_ailevate_logging/ai_ailevate_logging/: README.md  logger.py  setup.py
resource-infra-aks/: 00-instructions.txt  02-variables.tf  10-outputs.tf  kubernetes-pipelines.yml  pipeline-aks-configuration.yml  pipeline-aks-deployment.yml  pipeline-aks-difyab.yml  test.yaml
service-ai-agents/: .env.example  Dockerfile  README.md  ai-agents00-namespace.yaml  ai-agents01-deployment.yaml  ai-agents02-ingress.yaml  azure-pipelines.yml  deployment.yaml  namespace.yaml  pyproject.toml  pytest.ini  requirements.txt
service-ai-agents/app/: main.py
service-ai-agents/app/api/v1/endpoints/: chat.py  dify_integration.py
service-ai-agents/app/core/: config.py  prompts.py  resources.py
service-ai-agents/app/services/: llm_client.py  workflow_service.py
service-ai-agents/app/utils/: JsonUtil.py  logger.py
service-ai-agents/tests/: conftest.py
service-ai-agents/tests/api/: test_chat.py  test_dify_integration.py
service-ai-agents/tests/api/assets/: sample.yml
service-ai-agents/tests/services/: test_workflow_service.py
service-ai-agents/tests/utils/: test_JsonUtil.py
service-dify-ai/: dify-ai02-ingress.yaml  dify-deployment.yaml  dify-deployment.yamlLoadBalancer
service-infra-whoami/: deployment.yaml
service-ux-chatbox/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  azure-pipelines.yml  deployment-ingress.yaml  deployment.yaml  index.html  package.json  (+7 more)
(+52 files in other folders)
