[tool.poetry]
name = "service-ai-agents"
version = "0.1.0"
description = "AI Agents Service"
authors = ["Agent Builder Team"]
readme = "README.md"

# Move this line here
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.11,<0.116.0"
uvicorn = { version = ">=0.34.0,<3.0.0", extras = ["standard"] }
openai = ">=1.66.5,<2.0.0"
pydantic = ">=2.10.6,<3.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
python-multipart = ">=0.0.20,<0.0.21"
requests = ">=2.32.3,<3.0.0"
pyyaml = ">=6.0.2,<7.0.0"


ai-ailevate-logging = { path = "../core/ai_ailevate_logging", develop = true }

[tool.poetry.dev-dependencies]
pre-commit = "*"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"